--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Web/index.html
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Web/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Q&A Room Application" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <title>BlazorApp</title>
   </head>
   <body>
