--- a/templates/Aspire/ReactApp/ReactApp/ReactApp.Web/index.html
+++ b/templates/Aspire/ReactApp/ReactApp/ReactApp.Web/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <title>BlazorApp</title>
+    <title>ReactApp</title>
   </head>
   <body>
     <div id="root"></div>
